# Soroban-Registry

./: .dockerignore  .env.example  .gitignore  Dockerfile  PR_SECURITY_SCANNING_NOTIFICATIONS.md  README.md  REALTIME_UPDATES_IMPLEMENTATION.md  REVIEW_SYSTEM_IMPLEMENTATION.md  docker-compose.yml  handlers.upstream.rs  package-lock.json
backend/: Cargo.toml  Dockerfile  cargo_check.txt  check_db.rs  check_errors.txt  check_errors2.txt  clippy_latest.txt  clippy_latest_utf8.txt  diff.txt  errors.txt  tmp_shared_errors.txt
backend/api/: Cargo.toml  build_log.txt  cargo_check_full.txt  cargo_check_v2.txt  cargo_check_v3.txt  cargo_check_v4.txt  cargo_check_v5.txt  cargo_check_v6.txt  cargo_check_v7.txt  cargo_errors.txt  cargo_errors_2.txt  check_errors.txt  compile_errors.json  compile_errors.txt  compile_errors_utf8.txt  crash_log.txt  final_check.txt  grafana_dashboard.json
backend/api/plugin_marketplace/: index.json
backend/api/src/: ab_test_handlers.rs  abi_versioning_handlers.rs  activity_feed_handlers.rs  activity_feed_routes.rs  aggregation.rs  analytics.rs  analytics_handlers.rs  audit.rs  auth.rs  auth_handlers.rs  backup_handlers.rs  batch_verify_handlers.rs  breaking_changes.rs  cache.rs  canary_handlers.rs  category_handlers.rs  client_observability_handlers.rs  clone_federation_handlers.rs  collaborative_reviews.rs  compatibility_testing_handlers.rs  config.rs  contract_events.rs  contract_stats_handlers.rs  contributor_handlers.rs  custom_metrics_handlers.rs  db_monitoring.rs  dependency.rs  dependency_handlers.rs  deprecation_handlers.rs  disaster_recovery_models.rs  error.rs  error_logging.rs  events.rs  favorites_handlers.rs  formal_verification.rs  formal_verification_handlers.rs  gas_estimation_handlers.rs  governance_handlers.rs  graph_analysis.rs  graph_analysis_handlers.rs  (+56 more)
backend/api/src/ai/: context_manager.rs  handlers.rs  mod.rs  models.rs  prompt_builder.rs  service.rs
backend/api/src/graphql/: loaders.rs  mod.rs  schema.rs  types.rs
backend/api/src/handlers/: compatibility.rs  contract_metadata.rs  migrations.rs  reviews.rs  search.rs  validators.rs
backend/api/src/simulation/: abi_extractor.rs  gas_estimator.rs  mod.rs  performance_analyzer.rs  wasm_validator.rs
backend/api/src/state_monitor/: anomaly_detector.rs  event_listener.rs  handlers.rs  mod.rs
backend/api/src/type_safety/: bindings.rs  mod.rs  openapi.rs  parser.rs  types.rs  validator.rs
backend/api/src/usage_counter/: README.md
backend/api/src/validation/: comprehensive_tests.rs  enhanced_extractors.rs  extractors.rs  integration_guide.rs  mod.rs  payload_size.rs  requests.rs  sanitizers.rs  url_validation.rs  validation_rate_limit.rs  validators.rs
backend/api/tests/: batch_contracts_endpoint_tests.rs  compatibility_testing_tests.rs  compatibility_tests.rs  cors_tests.rs  dependency_tests.rs  migration_versioning_tests.rs  multitenancy_tests.rs  mutation_testing_tests.rs  publisher_verification_tests.rs  regression_tests.rs  release_notes_tests.rs  review_tests.rs  slug_tests.rs  usage_count_migration_tests.rs  usage_counter_integration_tests.rs  verification_tests.rs
backend/contract_abi/src/: lib.rs  openapi.rs  parser.rs  types.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: backoff.rs  config.rs  db.rs  detector.rs  lib.rs  main.rs  reorg.rs  rpc.rs  state.rs  telemetry.rs
backend/indexer/tests/: integration_tests.rs
backend/seeder/src/: data.rs  main.rs
backend/shared/: Cargo.toml
backend/shared/src/: error.rs  lib.rs  models.rs  pagination.rs  semver.rs  slug.rs  source_storage.rs  upgrade.rs
backend/shared/tests/: contract_stats_tests.rs  semver_bug_verification.rs  upgrade_tests.rs
backend/verifier/: Cargo.toml
backend/verifier/src/: deps.rs  engine.rs  lib.rs
cli/: BENCHMARKS.md  Cargo.toml  FLAMEGRAPH_ALTERNATIVES.md  build.rs
cli/benches/: flamegraph_bench.rs
cli/dashboard/: README.md  package.json  tsconfig.json
cli/dashboard/scripts/: mock-ws-server.ts
cli/dashboard/src/: index.ts
cli/dashboard/src/dashboard/: run.ts  types.ts
cli/dashboard/src/dashboard/render/: render_scheduler.ts  sparkline.ts
cli/dashboard/src/dashboard/state/: selectors.ts  store.ts
cli/dashboard/src/dashboard/ui/: dashboard_app.ts  modals.ts
cli/dashboard/src/dashboard/util/: format.ts
cli/dashboard/src/dashboard/ws/: client.ts  protocol.ts
cli/src/: analytics.rs  analyze.rs  audit_command.rs  backup.rs  batch_ops.rs  batch_register.rs  batch_verify.rs  cicd.rs  codegen.rs  commands.rs  compare.rs  config.rs  contract_verify.rs  contracts.rs  conversions.rs  costs.rs  coverage.rs  dashboard.rs  deploy.rs  events.rs  export.rs  formal_verification.rs  fuzz.rs  import.rs  incident.rs  io_utils.rs  lib.rs  main.rs  manifest.rs  multisig.rs  net.rs  network.rs  package_signing.rs  patch.rs  plugins.rs  profiler.rs  release_notes.rs  shell.rs  sla.rs  table_format.rs  (+8 more)
cli/tests/: analyze_integration.rs  docs_integration.rs  export_integration.rs  multisig_integration.rs  network_integration.rs  search_integration.rs  template_commands.rs  test_command_integration.rs  track_deployment_integration.rs
soroban-registry/: Cargo.toml
soroban-registry/crates/soroban-batch/: Cargo.toml
soroban-registry/crates/soroban-batch/src/: engine.rs  lib.rs  rollback.rs
soroban-registry/crates/soroban-lint-cli/src/: main.rs
soroban-registry/crates/soroban-lint-core/src/: analyzer.rs  config.rs  diagnostic.rs  fixer.rs
soroban-registry/crates/soroban-lint-core/src/rules/: hardcoded_addresses.rs  improper_token_handling.rs  large_data_in_storage.rs  mod.rs  (+11 more)
soroban-registry/crates/soroban-load-balancer/src/: balancer.rs  health.rs  instance.rs  lib.rs  session.rs  types.rs
soroban-registry/crates/soroban-security-patch/: Cargo.toml
soroban-registry/crates/soroban-security-patch/src/: audit.rs  distribution.rs  lib.rs  patch.rs  rollout.rs  types.rs  versioning.rs
soroban-registry/crates/soroban-state-core/src/: client.rs  decoder.rs  differ.rs  dry_run.rs  inspector.rs  types.rs
soroban-registry/examples/: token_fixed.rs  token_with_issues.rs
(+409 files in other folders)
