[workspace]
members = ["api", "indexer", "verifier", "shared", "seeder", "contract_abi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Soroban Registry Contributors"]
license = "MIT"
repository = "https://github.com/ALIPHATICHYD/Soroban-Registry"

[workspace.dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "rust_decimal",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.24"

# OpenTelemetry
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.16", features = ["grpc-tonic", "trace"] }
opentelemetry-prometheus = "0.16"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
once_cell = "1.19"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

syn = { version = "2.0", features = ["full", "visit"] }

# WASM validation
wasmparser = "0.224"

# Decimal
rust_decimal = "1.35"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"