[package]
name = "soroban-registry-cli"
version = "0.1.0"
edition = "2021"
authors = ["Soroban Registry Contributors"]
license = "MIT"
build = "build.rs"

[[bin]]
name = "soroban-registry"
path = "src/main.rs"

[dependencies]
shared = { path = "../backend/shared" }
contract_abi = { path = "../backend/contract_abi" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = [
	"json",
	"rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hmac = "0.12"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.14"
hex = "0.4"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
serde_yaml = "0.9"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
bs58 = "0.5"
ripemd = "0.1"

[dev-dependencies]
criterion = "0.5"
sysinfo = "0.28"
