[workspace]
members = [
    "crates/soroban-lint-core",
    "crates/soroban-lint-cli",
    "crates/soroban-state-core",
    "crates/soroban-load-balancer",
    "crates/soroban-batch",
    "crates/soroban-security-patch",
]
resolver = "2"

[workspace.dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
walkdir = "2"
anyhow = "1"
colored = "2"
sha2 = "0.10"
regex = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
stellar-xdr = { version = "25.0.0", features = ["curr", "std", "serde"] }
tokio = { version = "1", features = ["full"] }
tabled = "0.15"
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
arc-swap = "1"
parking_lot = "0.12"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"