[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
openapi = []

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
soroban-batch = { path = "../../soroban-registry/crates/soroban-batch" }
verifier = { path = "../verifier" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
moka = { version = "0.12.13", features = ["future"] }
async-trait = "0.1.89"
lru = "0.16.3"
rand = "0.8"
async-recursion = "1.1.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonwebtoken = "9.3.0"
tokio-tungstenite = { workspace = true }
regex = "1.10"
lazy_static = "1.4"
wasmparser = { workspace = true }
contract_abi = { path = "../contract_abi" }
rust_decimal = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
csv = "1.3"
