[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["openapi"]
openapi = []

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
verifier = { path = "../verifier" }
soroban-batch = { path = "../../soroban-registry/crates/soroban-batch" }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
moka = { version = "0.12.13", features = ["future"] }
async-trait = "0.1.89"
lru = "0.16.3"
async-recursion = "1.1.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonwebtoken = "9.3.0"
tokio-tungstenite = { workspace = true }
regex = "1.10"
lazy_static = "1.4"
wasmparser = { workspace = true }
difference = "2.0"
contract_abi = { path = "../contract_abi" }
rust_decimal = { workspace = true }
redis = { version = "0.25", features = ["tokio-rustls-comp", "json", "connection-manager", "tokio-comp"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
futures-util = "0.3"
stellar-strkey = "0.0.16"
stellar-xdr = { version = "26.0.0", features = ["curr", "std", "base64"] }

[dev-dependencies]
proptest = "1.4"
