[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
utoipa = { workspace = true }
base64 = { workspace = true }
rust_decimal = "1.35"
sha2 = "0.10"
hex = "0.4"
s3 = "0.33"
tokio = { workspace = true }
tempfile = "3.5"
