[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono", "json", "rust_decimal"] }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
utoipa = { workspace = true }
base64 = { workspace = true }
rust_decimal = "1.35"
sha2 = "0.10"
hex = "0.4"
s3 = { package = "rust-s3", version = "0.37", features = ["blocking"] }
tokio = { workspace = true }
tempfile = "3.5"
