[package]
name = "verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "verifier"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }


tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true } # Keep this one
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tempfile = "3.13"
