[package]
name = "soroban-batch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true }
dashmap = { workspace = true }
colored.workspace = true
tracing = "0.1.44"
uuid = { version = "1", features = ["v4", "serde"] }
